--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@types/react-dom": "^18.3.0",
     "@types/recoil": "^0.0.9",
+    "jotai": "^2.8.3",
+    "mobx-react": "^9.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
