--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "valtio": "^1.13.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
